--- a/server/RestaurantApp.BLL/RestaurantApp.BLL.csproj
+++ b/server/RestaurantApp.BLL/RestaurantApp.BLL.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
   </ItemGroup>
 
