add CRUD for account

--- a/server/RestaurantApp/appsettings.json
+++ b/server/RestaurantApp/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "RestaurantAppContext": "Server=(localdb)\\mssqllocaldb;Database=RestaurantApp-V2;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "Secret": "JADOW$(20419Asdj@()9320WA)WDAawdaso",
+    "Issuer": "http://localhost:62941",
+    "Audience": "http://localhost:62941"
+  }
 }
