--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "uid": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
