--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "card-validator": "^8.1.0",
     "fontsource-roboto": "^3.0.3",
     "jsencrypt": "^3.0.0-rc.1",
     "moment": "^2.29.0",
@@ -21,6 +22,7 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
     "uid": "^1.0.0"
   },
