* stub out payment portal * stub out backend service to create order * stub out order hub

--- a/server/RestaurantApp.DAL/RestaurantApp.DAL.csproj
+++ b/server/RestaurantApp.DAL/RestaurantApp.DAL.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20201115053850_remove_card.cs" />
+    <Compile Remove="Migrations\20201115053850_remove_card.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9">
