--- a/server/RestaurantApp.DAL/RestaurantApp.DAL.csproj
+++ b/server/RestaurantApp.DAL/RestaurantApp.DAL.csproj
@@ -7,6 +7,14 @@
   <ItemGroup>
     <Compile Remove="Migrations\20201115053850_remove_card.cs" />
     <Compile Remove="Migrations\20201115053850_remove_card.Designer.cs" />
+    <Compile Remove="Migrations\20201115195051_init.cs" />
+    <Compile Remove="Migrations\20201115195051_init.Designer.cs" />
+    <Compile Remove="Migrations\20201115195144_i.cs" />
+    <Compile Remove="Migrations\20201115195144_i.Designer.cs" />
+    <Compile Remove="Migrations\20201115195241_init.cs" />
+    <Compile Remove="Migrations\20201115195241_init.Designer.cs" />
+    <Compile Remove="Migrations\20201115195830_init_2.cs" />
+    <Compile Remove="Migrations\20201115195830_init_2.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
