--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "fontsource-roboto": "^3.0.3",
     "jsencrypt": "^3.0.0-rc.1",
     "moment": "^2.29.0",
+    "moment-timezone": "^0.5.32",
     "notistack": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
