--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "notistack": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-flatpickr": "^3.10.6",
     "react-number-format": "^4.4.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
