setup env ready for deploy

--- a/server/RestaurantApp.BLL/RestaurantApp.BLL.csproj
+++ b/server/RestaurantApp.BLL/RestaurantApp.BLL.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Configurations>Development;Production;Testing</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
