--- a/server/RestaurantApp/appsettings.json
+++ b/server/RestaurantApp/appsettings.json
@@ -9,10 +9,11 @@
   "ConnectionStrings": {
     "RestaurantAppContext": "Server=(localdb)\\mssqllocaldb;Database=RestaurantApp-V2;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "Urls": "http://localhost:44366",
   "AllowedHosts": "*",
   "AppSettings": {
     "Secret": "JADOW$(20419Asdj@()9320WA)WDAawdaso",
-    "Issuer": "http://localhost:62941",
-    "Audience": "http://localhost:62941"
+    "Issuer": "http://localhost:44366",
+    "Audience": "http://localhost:44366"
   }
 }
