--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -18,7 +18,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/hibachihouse/",
+  "start_url": ".",
   "display": "standalone",
   "theme_color": "#fafafa",
   "background_color": "#fafafa"
