--- a/server/RestaurantApp/RestaurantApp.csproj
+++ b/server/RestaurantApp/RestaurantApp.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
-    <Configurations>Development;Produdction;Testing</Configurations>
+    <Configurations>Development;Production;Testing</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
