--- a/client/package.json
+++ b/client/package.json
@@ -31,8 +31,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build-Testing": "set PUBLIC_URL=/testing/hibachihouse&&env-cmd -f .env.testing react-scripts build",
-    "build-Production": "set PUBLIC_URL=/hibachihouse&&env-cmd -f .env.production react-scripts build",
+    "build-Testing": "PUBLIC_URL=/testing/hibachihouse GENERATE_SOURCEMAP=false env-cmd -f .env.testing react-scripts build",
+    "build-Production": "PUBLIC_URL=/hibachihouse GENERATE_SOURCEMAP=false env-cmd -f .env.production react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
