ditch mssql, switch to mySql because its cheaper..

--- a/server/RestaurantApp/appsettings.json
+++ b/server/RestaurantApp/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "RestaurantAppContext": "Server=(localdb)\\mssqllocaldb;Database=RestaurantApp-V2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "RestaurantAppContext": "server=localhost;user=root;database=RestaurantApp-V2"
   },
   "Urls": "http://localhost:44366",
   "AllowedHosts": "*",
